[story/VSPC-242] fixed extra whitespace in pop-up menu/addressed other UI issues, cleaned up some unnecessary css styling, and fixed module links block UI issues

--- a/vspace/src/main/webapp/resources/extra/Home.css
+++ b/vspace/src/main/webapp/resources/extra/Home.css
@@ -659,13 +659,11 @@
 
 .link-modal {
 	display: none;
-	position: fixed;
 	top: 2.5%;
 	right: 2.5%;
 	left: 2.5%;
 	bottom: 0;
 	z-index: 9999;
-	overflow-y: scroll;
 	background: white;
 	padding: 25px;
 	border-radius: 10px;
